<?xml version="1.0" encoding="utf-8"?>
<!--
    Dasselbe Band wie im Hauptbildschirm: Exportieren, Alles importieren, Filtern – gleiche
    Reihenfolge, gleiche ids, alle drei fest sichtbar (siehe main_menu.xml). Das Depot-Diagramm und
    die Erkennungsregeln standen früher ebenfalls im Band; sie sind ins Menü gerückt, damit die
    Bänder in beiden Ansichten übereinstimmen.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_export"
        android:title="@string/action_export"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_import_all"
        android:icon="@drawable/ic_import"
        android:title="@string/action_import_all"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/action_filter"
        app:showAsAction="always" />

    <!-- Nur bei eingeschalteter Beleg-Erkennung sichtbar (siehe onCreateOptionsMenu). -->
    <item
        android:id="@+id/action_statement_rules"
        android:icon="@drawable/ic_rules"
        android:title="@string/statement_rules"
        app:showAsAction="never" />

    <!-- „Auswertung" ist hier das Depot-Diagramm, nicht die Zeitauswertung des Hauptbildschirms. -->
    <item
        android:id="@+id/action_reports"
        android:icon="@drawable/ic_chart"
        android:title="@string/action_reports"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_analysis"
                android:icon="@drawable/ic_chart"
                android:title="@string/action_analysis" />

            <item
                android:id="@+id/action_categories"
                android:icon="@drawable/ic_pie"
                android:title="@string/action_categories" />

            <item
                android:id="@+id/action_balance"
                android:icon="@drawable/ic_wallet"
                android:title="@string/action_balance" />

            <item
                android:id="@+id/action_budget"
                android:icon="@drawable/ic_budget"
                android:title="@string/action_budget" />

            <item
                android:id="@+id/action_scheduled"
                android:icon="@drawable/ic_calendar"
                android:title="@string/action_scheduled" />
        </menu>
    </item>

    <item
        android:id="@+id/action_switch_profile"
        android:icon="@drawable/ic_switch"
        android:title="@string/action_switch_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
